--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -4,11 +4,11 @@
   display: none;
 }
 
-/*#wall div#tag-2 {
+#wall div#tag-2 {
   display: none;
 }
 
-div#wall #tag-3.slick.wicked {
+/*div#wall #tag-3.slick.wicked {
   display: none;
 }*/
 /*#wall .parent #tag-4 {
