--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -8,9 +8,9 @@
   display: none;
 }
 
-/*div#wall #tag-3.slick.wicked {
+#wall #tag-3.slick.wicked {
   display: none;
-}*/
+}
 /*#wall .parent #tag-4 {
   display: none;
 }
