--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -11,10 +11,11 @@
 #wall #tag-3.slick.wicked {
   display: none;
 }
-/*#wall .parent #tag-4 {
+
+#wall .parent #tag-4 {
   display: none;
 }
 
-div#wall div.parent #tag-5.slick {
+/*div#wall div.parent #tag-5.slick {
   display: none;
 }*/
